--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Article Beautifuer",
+  "name": "Article Beautifier",
   "version": "0.0.1",
   "description": "Takes an article and displays it with nicer typography",
   "permissions": [
